# stead-brain

./: .gitignore  Cargo.toml  PIE_PIN.txt  README.md
crates/stead-brain/: Cargo.toml
crates/stead-brain-core/: Cargo.toml
crates/stead-brain-core/src/: auth.rs  lib.rs
crates/stead-brain-protocol/: Cargo.toml
crates/stead-brain-protocol/src/: lib.rs
crates/stead-brain/src/: main.rs
crates/stead-brain/tests/: stdio_provider_auth.rs
skills/builtin/artifact-document/: SKILL.md
skills/builtin/browser-credential-handoff/: SKILL.md
skills/builtin/github-browser/: SKILL.md
skills/builtin/gmail-browser/: SKILL.md
skills/builtin/notion-browser/: SKILL.md
