[package]
name = "stead-brain-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
stead-brain-protocol = { path = "../stead-brain-protocol" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
walkdir.workspace = true

pie-agent-core.workspace = true
pie-ai.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[dev-dependencies]
tempfile.workspace = true
